// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input should render with autoComplete 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      autoComplete="tel"
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with hidden password 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default mfui-text-field_icon mfui-text-field_password"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="password"
      value="value"
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with ie placeholder 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value=""
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> input should render with inputmode 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      inputMode="numeric"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with mask 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <InputElement
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      inputRef={[Function]}
      mask="+7 (999) 999-99-99"
      maskChar="_"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with number value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value={1234}
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with string value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value="value"
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with type 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="tel"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render with value after updating number prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value={5678}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value={1234}
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> input should render with value after updating string prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value="newValue"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> input should render with visible password 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default mfui-text-field_icon"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value="value"
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> input should render without ie placeholder when value is passed 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value="value"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> input should render without no-touch class 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value=""
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> input should render without placeholder with hidePlaceholder prop 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder=" "
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> should render with common props 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with custom icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_icon customClass"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__icon-box"
      onClick={[Function]}
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with default props 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
    >
      Текст
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> should render with error 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_error mfui-text-field_icon customClass"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_error"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon mfui-text-field__icon_clear"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with hidden icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with valid 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_valid mfui-text-field_icon customClass"
>
  <div
    className="mfui-text-field__field-wrapper"
  >
    <input
      className="mfui-text-field__field inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Текст"
      required={true}
      type="text"
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__icon-box"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render fixed textarea 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onScroll={[Function]}
      placeholder="Текст"
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render flexible textarea 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_flexible"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_flexible mfui-text-field__field_textarea_flexible inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onScroll={[Function]}
      placeholder="Текст"
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
    <div
      className="mfui-text-field__resizer"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render with error because of max limit is exceeded 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_error customClass"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea inputClass"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onScroll={[Function]}
      placeholder="Текст"
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value="123456"
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      label
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text mfui-text-field__notice-text_active"
      onTransitionEnd={[Function]}
    >
      noticeText
    </div>
    <span
      className="mfui-text-field__counter mfui-text-field__counter_error"
    >
      6/4
    </span>
  </div>
</div>
`;

exports[`<TextField /> textarea should render with ie placeholder 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        onScroll={[Function]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "72px",
          }
        }
        value=""
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render with number value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      onScroll={[Function]}
      placeholder="placeholder"
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value={1234}
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> textarea should render with string value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      onScroll={[Function]}
      placeholder="placeholder"
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value="value"
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;

exports[`<TextField /> textarea should render with value after updating number prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value={5678}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        onScroll={[Function]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "72px",
          }
        }
        value={1234}
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render with value after updating string prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value="newValue"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        onScroll={[Function]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "72px",
          }
        }
        value="value"
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render without ie placeholder when value is passed 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value="value"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        onScroll={[Function]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "72px",
          }
        }
        value="value"
      />
      <label
        className="mfui-text-field__label"
        htmlFor="id"
      >
        placeholder
        <span
          className="mfui-text-field__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-text-field__wrap"
    >
      <div
        className="mfui-text-field__notice-text"
        onTransitionEnd={[Function]}
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render without placeholder with hidePlaceholder prop 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      onScroll={[Function]}
      placeholder=" "
      required={true}
      style={
        Object {
          "height": "72px",
        }
      }
      value=""
    />
    <label
      className="mfui-text-field__label"
      htmlFor="id"
    >
      placeholder
      <span
        className="mfui-text-field__require-mark"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__notice-text"
      onTransitionEnd={[Function]}
    />
  </div>
</div>
`;
